# np-mt-rnm

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: falsification_benchmark.csv
docs/: design.md
legacy/: CreateMatrices_new.m  NP_MT_RNM_FALSIFY4_1.m  NP_MT_RNM_FSA4_1.m  ODESysFun.m  ODESysFunS.m  README.md  RESCUE_NEW4_1.m
np_mt_rnm/: __init__.py  categories.py  falsification.py  figures.py  network.py  ode.py  rescue.py  sbml_export.py  simulation.py  statistics.py  topology.py  transitions.py
results/replicates/: baseline_hyper.npz  baseline_hypo.npz  baseline_normal.npz
results/tables/: baseline_summary.csv  falsification_rules.csv  rescue_per_node_deltas.csv  rescue_summary.csv  topology_metrics.csv  transition_hypo_to_normal.csv  transition_normal_to_hyper.csv
scripts/: build_web_bundle.py  export_sbml.py  run_all.py  run_baseline.py  run_falsification.py  run_rescue.py  run_topology.py  run_transitions.py
tests/: ode_hand_computation.py  test_categories.py  test_falsification.py  test_falsification_pass_rate.py  test_network.py  test_ode.py  test_regime_polarities.py  test_replicate_loop.py  test_rescue.py  test_rescue_top_perturbations.py  test_sbml_export.py  test_simulation_helpers.py  test_single_replicate.py  test_transitions.py
